--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,22 @@
-version: '3'
+version: '3.3'
 
 volumes:
   data:
 
 services:
   php:
-    image: php:7.3-fpm
-    volumes:
-      - data:/var/www/html
-  web:
     build:
       context: ./
+    volumes:
+      - data:/var/www/html
+      - ./pathfinder-config/environment.ini :/var/www/html/app/environment.ini
+
+  web:
+    image: nginx:1.15.9-alpine
     links:
       - php
     ports:
       - 8080:80
     volumes:
       - data:/var/www/html
+      - ./pathfinder-nginx.conf :/etc/nginx/conf.d/default.conf
