--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
     networks:
       - pathfinder
     volumes:
-      - data:/var/www/html
+      - pathfinder-data:/var/www/html
       - ./pathfinder-config/environment.ini :/var/www/html/app/environment.ini
       - ./pathfinder-config/config.ini :/var/www/html/app/config.ini
       - ./pathfinder-config/pathfinder.ini :/var/www/html/app/pathfinder.ini
@@ -31,7 +31,7 @@ services:
     ports:
       - 8080:80
     volumes:
-      - data:/var/www/html
+      - pathfinder-data:/var/www/html
       - ./pathfinder-nginx.conf :/etc/nginx/conf.d/default.conf
 
   redis:
