--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - 8080:80
     volumes:
       - pathfinder-data:/var/www/html
-      - ./pathfinder-nginx.conf :/etc/nginx/conf.d/default.conf
+      - ./pathfinder-config/pathfinder-nginx.conf :/etc/nginx/conf.d/default.conf
 
   redis:
     image: bitnami/redis:latest
