--- a/pathfinder-app/Dockerfile
+++ b/pathfinder-app/Dockerfile
@@ -1,6 +1,6 @@
 FROM php:7.2-fpm
 COPY --from=composer /usr/bin/composer /usr/bin/composer
-RUN apt-get update &&  apt-get install -y libjpeg62-turbo-dev libpng-dev libzmq3-dev git unzip zlib1g-dev libevent-dev libssl-dev \
+RUN apt-get update &&  apt-get install -y libjpeg62-turbo-dev libpng-dev libzmq5 libzmq3-dev git unzip zlib1g-dev libevent-dev libssl-dev \
 && docker-php-ext-install sockets \
 && pecl channel-update pecl.php.net \
 && pecl install event-2.4.2 \
